# serializer version: 1
# name: test_situation_salarie_serializer_with_eiti_fields_filled[ACI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': True,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '04',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[ACI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': True,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '04',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[AI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': True,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '03',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[AI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': True,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '03',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[EITI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '07',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[EITI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '07',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[EI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': True,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '01',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[EI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': True,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '01',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[ETTI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': True,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '02',
  })
# ---
# name: test_situation_salarie_serializer_with_eiti_fields_filled[ETTI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '01',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': True,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '02',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[ACI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '00',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '04',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[ACI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': None,
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '04',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[AI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '00',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '03',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[AI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': None,
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '03',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[EITI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '00',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '07',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[EITI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': None,
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '07',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[EI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '00',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '01',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[EI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': None,
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '01',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[ETTI][employee record update notification]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '00',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '02',
  })
# ---
# name: test_situation_salarie_serializer_with_empty_fields[ETTI][employee record]
  dict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': None,
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '02',
  })
# ---
# name: test_update_notification_use_static_serializers_on_missing_fields[birth_country-None-personnePhysique]
  ReturnDict({
    'civilite': 'MME',
    'codeComInsee': dict({
      'codeComInsee': None,
      'codeDpt': '099',
    }),
    'codeGroupePays': '3',
    'codeInseePays': '102',
    'dateNaissance': '01/01/1990',
    'idItou': 'a08dbdb523633cfc59dfdb297307a1',
    'nomNaissance': None,
    'nomUsage': 'DOE',
    'passDateDeb': '01/01/2000',
    'passDateFin': '01/01/3000',
    'passIae': '999999999999',
    'prenom': 'JANE',
    'sufPassIae': None,
  })
# ---
# name: test_update_notification_use_static_serializers_on_missing_fields[birth_place-None-personnePhysique]
  ReturnDict({
    'civilite': 'MME',
    'codeComInsee': dict({
      'codeComInsee': None,
      'codeDpt': '099',
    }),
    'codeGroupePays': '3',
    'codeInseePays': '102',
    'dateNaissance': '01/01/1990',
    'idItou': 'a08dbdb523633cfc59dfdb297307a1',
    'nomNaissance': None,
    'nomUsage': 'DOE',
    'passDateDeb': '01/01/2000',
    'passDateFin': '01/01/3000',
    'passIae': '999999999999',
    'prenom': 'JANE',
    'sufPassIae': None,
  })
# ---
# name: test_update_notification_use_static_serializers_on_missing_fields[education_level--situationSalarie]
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '00',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '01',
  })
# ---
# name: test_update_notification_use_static_serializers_on_missing_fields[hexa_commune-None-adresse]
  ReturnDict({
    'adrCpltDistribution': None,
    'adrLibelleVoie': 'DE BLIDA',
    'adrMail': None,
    'adrNumeroVoie': '3',
    'adrTelephone': None,
    'codeextensionvoie': None,
    'codeinseecom': '57463',
    'codepostalcedex': '57000',
    'codetypevoie': 'AV',
  })
# ---
# name: test_update_notification_use_static_serializers_on_missing_fields[hexa_lane_name--adresse]
  ReturnDict({
    'adrCpltDistribution': None,
    'adrLibelleVoie': 'DE BLIDA',
    'adrMail': None,
    'adrNumeroVoie': '3',
    'adrTelephone': None,
    'codeextensionvoie': None,
    'codeinseecom': '57463',
    'codepostalcedex': '57000',
    'codetypevoie': 'AV',
  })
# ---
# name: test_update_notification_use_static_serializers_on_missing_fields[hexa_lane_type--adresse]
  ReturnDict({
    'adrCpltDistribution': None,
    'adrLibelleVoie': 'DE BLIDA',
    'adrMail': None,
    'adrNumeroVoie': '3',
    'adrTelephone': None,
    'codeextensionvoie': None,
    'codeinseecom': '57463',
    'codepostalcedex': '57000',
    'codetypevoie': 'AV',
  })
# ---
# name: test_update_notification_use_static_serializers_on_missing_fields[hexa_post_code--adresse]
  ReturnDict({
    'adrCpltDistribution': None,
    'adrLibelleVoie': 'DE BLIDA',
    'adrMail': None,
    'adrNumeroVoie': '3',
    'adrTelephone': None,
    'codeextensionvoie': None,
    'codeinseecom': '57463',
    'codepostalcedex': '57000',
    'codetypevoie': 'AV',
  })
# ---
# name: test_update_notification_use_static_serializers_on_missing_pole_emploi_since_fields
  ReturnDict({
    'inscritPoleEmploi': False,
    'inscritPoleEmploiDepuis': None,
    'niveauFormation': '00',
    'numeroIDE': None,
    'orienteur': '08',
    'salarieAideSociale': False,
    'salarieBenefAAH': False,
    'salarieBenefAAHDepuis': None,
    'salarieBenefASS': False,
    'salarieBenefASSDepuis': None,
    'salarieBenefATA': False,
    'salarieBenefATADepuis': None,
    'salarieBenefRSA': 'NON',
    'salarieBenefRSADepuis': None,
    'salarieEnEmploi': True,
    'salarieOETH': False,
    'salarieRQTH': False,
    'salarieSansEmploiDepuis': None,
    'salarieSansRessource': False,
    'salarieTypeEmployeur': '01',
  })
# ---
